--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Section 3</li>
       </ul>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
+      <i class="fa fa-bars" id="menu"></i>
       </a>
     </nav>
   </header>
